# Armed-turtlebot

./: .gitignore  README.md  install.sh  smart_arm.launch  smart_arm.yaml  stack.xml  stack.xml~
arm-control/: readme
main_armed/: mainpage.dox  manifest.xml
main_armed/launch/: everything.launch
main_armed/src/: doEverything.py
mc/: .gitignore  .~lock.BDI table.xls#  BDI table.ods  BDI table.xls  README.txt  mainpage.dox  manifest.xml
mc/launch/: everything.launch  mission.launch
mc/msg/: belief_msg.msg
mc/src/: .mc.py.swp  mc.py  motionControl.py
mc/srv/: updateBelief.srv
mission_control/: .gitignore  manifest.xml
mission_control/src/: .mission.py.swp  .missionControl.py.swp  .mission_control.py.swp  font.py  mission.py  mission.txt  missionControl.py  mission_control.py  motionControl.py  (+4 more)
motionControl/: mainpage.dox  manifest.xml
pict/: segmentation_GUI.xcf
sinus_arm/: mainpage.dox  manifest.xml
smart_arm_node/: mainpage.dox  manifest.xml
tracking/: CMakeLists.txt  Makefile  calibrateInt.cpp  main.cpp  mainpage.dox  manifest.xml
tracking/calibData/: img-00.pgm.xml  img-03.pgm  img-04.pgm  img-06.pgm  img-08.pgm
tracking/launch/: calibrate.launch  calibrate_camera.launch  calibrate_images.launch  camera_server.launch  detection.launch  detection_complete.launch  tracker.launch  tracker_real.launch
tracking/src/: calibrateInt.cpp  detection.cpp  main.cpp  profileData.out  tracking.cpp
tracking/src/calibData/: img-00.pgm.xml  img-01.pgm  img-02.pgm  img-03.pgm  img-04.pgm  img-05.pgm  img-06.pgm  img-07.pgm
visplib/: CMakeLists.txt
(+111 files in other folders)
